[gd_scene load_steps=30 format=3 uid="uid://ujt3l47r43xb"]

[ext_resource type="Script" path="res://scripts/geral.gd" id="1_5acd7"]
[ext_resource type="Texture2D" uid="uid://douloaoypljd" path="res://assets/sprites/characters/gato/sprite_gato_idle.png" id="1_522ck"]
[ext_resource type="Texture2D" uid="uid://dabrtcvemppaq" path="res://assets/sprites/ui/backgrounds/sprite_bg.png" id="2_gemfi"]
[ext_resource type="Texture2D" uid="uid://ctn6fmfi4vxc7" path="res://assets/sprites/ui/backgrounds/sprite_bg_display.png" id="2_pc03t"]
[ext_resource type="Texture2D" uid="uid://xxprl8way60l" path="res://assets/sprites/resources/itens/sprite_tapete.png" id="3_70if6"]
[ext_resource type="Texture2D" uid="uid://b281ehwwgpacn" path="res://assets/sprites/ui/buttons/sprite_button_pink.png" id="5_mlnv4"]
[ext_resource type="Texture2D" uid="uid://63vwt8j5cp8h" path="res://assets/sprites/characters/gato/sprite_gato_come.png" id="6_wdli8"]
[ext_resource type="Texture2D" uid="uid://b447ocy1bx8dg" path="res://assets/sprites/characters/gato/sprite_gato_miau.png" id="7_tp6hk"]
[ext_resource type="Texture2D" uid="uid://bqa3relvd683t" path="res://assets/sprites/characters/gato/sprite_gato_morre.png" id="9_bxo2h"]
[ext_resource type="Texture2D" uid="uid://bty5v620wkky0" path="res://assets/sprites/resources/itens/sprite_balao_frango.png" id="10_7abdx"]
[ext_resource type="Texture2D" uid="uid://d2jx32fkl3gbt" path="res://assets/sprites/resources/itens/sprite_balao.png" id="11_2g041"]
[ext_resource type="AudioStream" uid="uid://b2fsh5uhcurno" path="res://assets/audio/sound_effects/cat_trilling.mp3" id="12_06vwu"]
[ext_resource type="AudioStream" uid="uid://bdymbdhhme283" path="res://assets/audio/sound_effects/gato_miado.mp3" id="12_c8tkq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dbqqe"]
atlas = ExtResource("6_wdli8")
region = Rect2(0, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d1a7"]
atlas = ExtResource("6_wdli8")
region = Rect2(355, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_huqlv"]
atlas = ExtResource("6_wdli8")
region = Rect2(710, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl2fo"]
atlas = ExtResource("6_wdli8")
region = Rect2(1065, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrgbc"]
atlas = ExtResource("6_wdli8")
region = Rect2(1420, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5w2u"]
atlas = ExtResource("6_wdli8")
region = Rect2(1775, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fryn"]
atlas = ExtResource("6_wdli8")
region = Rect2(2130, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bk41"]
atlas = ExtResource("6_wdli8")
region = Rect2(2485, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqonk"]
atlas = ExtResource("9_bxo2h")
region = Rect2(355, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_phqsc"]
atlas = ExtResource("9_bxo2h")
region = Rect2(0, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxgdk"]
atlas = ExtResource("9_bxo2h")
region = Rect2(710, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_whwey"]
atlas = ExtResource("9_bxo2h")
region = Rect2(1065, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8vqg"]
atlas = ExtResource("9_bxo2h")
region = Rect2(1420, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rxun"]
atlas = ExtResource("9_bxo2h")
region = Rect2(1775, 0, 355, 398)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1qc6"]
atlas = ExtResource("9_bxo2h")
region = Rect2(2130, 0, 355, 398)

[sub_resource type="SpriteFrames" id="SpriteFrames_tj0p5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbqqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d1a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huqlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl2fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrgbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5w2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fryn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bk41")
}],
"loop": false,
"name": &"comendo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_522ck")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}, {
"duration": 1.0,
"texture": ExtResource("7_tp6hk")
}],
"loop": false,
"name": &"miado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqonk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phqsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxgdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whwey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8vqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rxun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1qc6")
}],
"loop": false,
"name": &"morto",
"speed": 5.0
}]

[node name="geral" type="Node2D"]
script = ExtResource("1_5acd7")
tempo_miado = 2

[node name="background" type="Sprite2D" parent="."]
position = Vector2(355, 320)
texture = ExtResource("2_gemfi")

[node name="display" type="Sprite2D" parent="background"]
position = Vector2(0, 30)
texture = ExtResource("2_pc03t")

[node name="tapete" type="Sprite2D" parent="background"]
position = Vector2(10, 155)
texture = ExtResource("3_70if6")

[node name="balao" type="Sprite2D" parent="."]
visible = false
position = Vector2(245, 224)
texture = ExtResource("11_2g041")

[node name="frango" type="Sprite2D" parent="balao"]
texture = ExtResource("10_7abdx")

[node name="tempo_comida" type="Timer" parent="balao"]
autostart = true

[node name="gato" type="AnimatedSprite2D" parent="."]
position = Vector2(385, 385)
sprite_frames = SubResource("SpriteFrames_tj0p5")
animation = &"idle"
autoplay = "idle"

[node name="audio_miado" type="AudioStreamPlayer" parent="gato"]
stream = ExtResource("12_c8tkq")
volume_db = -24.0

[node name="cat_trilling" type="AudioStreamPlayer" parent="gato"]
stream = ExtResource("12_06vwu")
volume_db = -24.0

[node name="miado_timer" type="Timer" parent="gato"]
autostart = true

[node name="botao" type="TextureButton" parent="."]
offset_left = 316.0
offset_top = 567.0
offset_right = 396.0
offset_bottom = 614.0
texture_normal = ExtResource("5_mlnv4")

[connection signal="timeout" from="balao/tempo_comida" to="." method="_on_tempo_comida_timeout"]
[connection signal="timeout" from="gato/miado_timer" to="." method="_on_miado_timer_timeout"]
[connection signal="pressed" from="botao" to="." method="_on_botao_pressed"]
